Lab proj1.2
- minor fixes
- labproj1.2 implementation